# fine-shyt-backend

./: Cargo.toml  db.sqlite3
src/: announcement.rs  extractor_error.rs  hermes_error.rs  main.rs  utils.rs
