[package]
name = "fineshyt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.9", features = [ "macros", "ws" ] }
axum-extra = "0.9.6"

tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures = "0.3.31"
futures-util = "0.3.31"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors"] }

thiserror = "2.0.3"

rand = "0.8.4"
rand_distr = "0.4.3"

urlencoding = "2.1.3"

strum = "0.26.3"
strum_macros = "0.26.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"